# opengl_sdl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: linux-gcc-x64.toolchain
framework/: CMakeLists.txt  renderer.cpp  renderer.h  shader.cpp  shader.h
lessons/: CMakeLists.txt
lessons/01_sdl_init/: CMakeLists.txt  main.cpp
lessons/02_load_shader/: CMakeLists.txt  main.cpp
lessons/03_rotate_triangle/: CMakeLists.txt  main.cpp
